--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         .banner {
             text-align: center;
             padding: 3rem;
-            background-image: url('banner.jpg'); /* Aquí puedes añadir una imagen de fondo similar */
+            background-image: url('banner.jpg'); 
             background-size: cover;
-            color: white;
+            color: black;
         }
 
         .categorias {
@@ -143,10 +143,10 @@
     <footer>
         <h3>¡Síguenos en nuestras redes sociales!</h3>
         <div class="redes-sociales">
-            <!-- Aquí puedes colocar los íconos de las redes sociales -->
-            <img src="facebook.png" alt="Facebook">
-            <img src="instagram.png" alt="Instagram">
-            <img src="twitter.png" alt="Twitter">
+         
+            <img src="https://i.pinimg.com/originals/70/b9/3a/70b93af70f637f2d8a2dec42bfcf23f8.jpg" alt="Facebook">
+            <img src="https://th.bing.com/th/id/OIP.aW-aOZNPCqeqI9Cp_tRB6wHaHa?w=178&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Instagram">
+        
         </div>
     </footer>
 </body>
