--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color:#f9f1e7;
         }
 
         header {
@@ -121,20 +121,39 @@
     </section>
 
     <section id="productos" class="categorias">
-        <div class="categoria">
-            <img src="anillos.jpg" alt="Anillos">
-            <h3>Anillos</h3>
-        </div>
-        <div class="categoria">
-            <img src="collares.jpg" alt="Collares">
-            <h3>Collares</h3>
-        </div>
-        <div class="categoria">
-            <img src="aretes.jpg" alt="Aretes">
-            <h3>Aretes</h3>
-        </div>
-        <!-- Agrega más categorías aquí -->
-    </section>
+    <div class="categoria">
+        <img src="cadena_hombre.jpg" alt="Cadena Hombre">
+        <h3>Cadena Hombre</h3>
+    </div>
+    <div class="categoria">
+        <img src="cadena_mujer.jpg" alt="Cadena Mujer">
+        <h3>Cadena Mujer</h3>
+    </div>
+    <div class="categoria">
+        <img src="pulsera_hombre.jpg" alt="Pulsera Hombre">
+        <h3>Pulsera Hombre</h3>
+    </div>
+    <div class="categoria">
+        <img src="pulsera_mujer.jpg" alt="Pulsera Mujer">
+        <h3>Pulsera Mujer</h3>
+    </div>
+    <div class="categoria">
+        <img src="dijes.jpg" alt="Dijes">
+        <h3>Dijes</h3>
+    </div>
+    <div class="categoria">
+        <img src="anillos.jpg" alt="Anillos">
+        <h3>Anillos</h3>
+    </div>
+    <div class="categoria">
+        <img src="tobillera.jpg" alt="Tobillera">
+        <h3>Tobillera</h3>
+    </div>
+    <div class="categoria">
+        <img src="aretes.jpg" alt="Aretes">
+        <h3>Aretes</h3>
+    </div>
+</section>
 
     <div class="whatsapp">
         <a href="https://wa.me/3112467795" target="_blank">Contáctanos por WhatsApp</a>
