--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color:#f9f1e7;
+            background-color:#F8C1D3;
         }
 
         header {
