--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color:#F8C1D3;
+            background-color: #F8C1D3;
         }
 
         header {
@@ -109,7 +109,7 @@
     <header>
         <img class="logo" src="https://i.postimg.cc/1zbHR0MK/Captura-de-pantalla-2024-10-06-121320.png" alt="JorMi Joyería">
         <nav>
-            <a href="#home">Inicio</a>
+            <a href="JORMI.html">Inicio</a>
             <a href="#productos">Productos</a>
             <a href="#contacto">Contacto</a>
         </nav>
@@ -121,39 +121,55 @@
     </section>
 
     <section id="productos" class="categorias">
-    <div class="categoria">
-        <img src="cadena_hombre.jpg" alt="Cadena Hombre">
-        <h3>Cadena Hombre</h3>
-    </div>
-    <div class="categoria">
-        <img src="cadena_mujer.jpg" alt="Cadena Mujer">
-        <h3>Cadena Mujer</h3>
-    </div>
-    <div class="categoria">
-        <img src="pulsera_hombre.jpg" alt="Pulsera Hombre">
-        <h3>Pulsera Hombre</h3>
-    </div>
-    <div class="categoria">
-        <img src="pulsera_mujer.jpg" alt="Pulsera Mujer">
-        <h3>Pulsera Mujer</h3>
-    </div>
-    <div class="categoria">
-        <img src="dijes.jpg" alt="Dijes">
-        <h3>Dijes</h3>
-    </div>
-    <div class="categoria">
-        <img src="anillos.jpg" alt="Anillos">
-        <h3>Anillos</h3>
-    </div>
-    <div class="categoria">
-        <img src="tobillera.jpg" alt="Tobillera">
-        <h3>Tobillera</h3>
-    </div>
-    <div class="categoria">
-        <img src="aretes.jpg" alt="Aretes">
-        <h3>Aretes</h3>
-    </div>
-</section>
+        <div class="categoria">
+            <a href="cadena_hombre.html">
+                <img src="cadena_hombre.jpg" alt="Cadena Hombre">
+                <h3>Cadena Hombre</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="cadena_mujer.html">
+                <img src="cadena_mujer.jpg" alt="Cadena Mujer">
+                <h3>Cadena Mujer</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="pulsera_hombre.html">
+                <img src="pulsera_hombre.jpg" alt="Pulsera Hombre">
+                <h3>Pulsera Hombre</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="pulsera_mujer.html">
+                <img src="pulsera_mujer.jpg" alt="Pulsera Mujer">
+                <h3>Pulsera Mujer</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="dijes.html">
+                <img src="dijes.jpg" alt="Dijes">
+                <h3>Dijes</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="anillos.html">
+                <img src="anillos.jpg" alt="Anillos">
+                <h3>Anillos</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="tobillera.html">
+                <img src="tobillera.jpg" alt="Tobillera">
+                <h3>Tobillera</h3>
+            </a>
+        </div>
+        <div class="categoria">
+            <a href="aretes.html">
+                <img src="aretes.jpg" alt="Aretes">
+                <h3>Aretes</h3>
+            </a>
+        </div>
+    </section>
 
     <div class="whatsapp">
         <a href="https://wa.me/3112467795" target="_blank">Contáctanos por WhatsApp</a>
@@ -161,14 +177,15 @@
 
     <footer>
         <h3>¡Síguenos en nuestras redes sociales!</h3>
-        <div class="redes-sociales">
-         
+        <div class="redes-sociales">        
             <img src="https://i.pinimg.com/originals/70/b9/3a/70b93af70f637f2d8a2dec42bfcf23f8.jpg" alt="Facebook">
             <img src="https://th.bing.com/th/id/OIP.aW-aOZNPCqeqI9Cp_tRB6wHaHa?w=178&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Instagram">
-        
         </div>
+        <p>&copy; 2024 Joyería JorMi. Todos los derechos reservados.</p>
     </footer>
-</body>
 
+</body>
 </html>
+
+
 
