--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <header>
         <img class="logo" src="https://i.postimg.cc/1zbHR0MK/Captura-de-pantalla-2024-10-06-121320.png" alt="JorMi Joyería">
         <nav>
-            <a href="JORMI.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="#productos">Productos</a>
             <a href="#contacto">Contacto</a>
         </nav>
