--- a/index.html
+++ b/index.html
@@ -32,13 +32,24 @@
             display: flex;
             gap: 2rem;
         }
-
+        
         nav a {
             color: white;
             text-decoration: none;
             font-weight: bold;
         }
+        nav a, .categoria a {
+        text-decoration: none;
+        color: inherit;
+        }
 
+        nav a:hover, .categoria a:hover {
+        color: #000; 
+        }
+
+        nav a:visited, .categoria a:visited {
+        color: inherit; 
+        }
         .banner {
             text-align: center;
             padding: 3rem;
@@ -153,7 +164,7 @@
         </div>
         <div class="categoria">
             <a href="anillos.html">
-                <img src="anillos.jpg" alt="Anillos">
+                <img src="<img src="https://i.postimg.cc/K8jDxhp6/Whats-App-Image-2024-10-30-at-2-32-20-PM-1.jpg" alt="Anillos">" alt="Anillos">
                 <h3>Anillos</h3>
             </a>
         </div>
