--- a/anillos.html
+++ b/anillos.html
@@ -137,7 +137,7 @@
 
     <section id="productos" class="categorias">
         <div class="categoria">
-            <img src="anillos.jpg" alt="Anillos">
+            <img src="<img src="https://i.postimg.cc/K8jDxhp6/Whats-App-Image-2024-10-30-at-2-32-20-PM-1.jpg" alt="Anillos">" alt="Anillos">
             <h3>Anillo Clásico</h3>
             <p>talla 8</p>
             <p>$70.000 cop</p>
