--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </div>
         <div class="categoria">
             <a href="anillos.html">
-                <img src="<img src="https://i.postimg.cc/K8jDxhp6/Whats-App-Image-2024-10-30-at-2-32-20-PM-1.jpg" alt="Anillos">" alt="Anillos">
+                <img src="<img src="https://i.postimg.cc/K8jDxhp6/Whats-App-Image-2024-10-30-at-2-32-20-PM-1.jpg" alt="Anillos">
                 <h3>Anillos</h3>
             </a>
         </div>
